# solitare

./: CMakeLists.txt  README.md  card.cpp  card.h  cardcontainer.cpp  cardcontainer.h  cardstack.h  colors.cpp  colors.h  constants.h  engine.cpp  engine.h  game.cpp  game.h  howtopage.cpp  howtopage.h  json_schema.txt  jsonhandler.cpp  jsonhandler.h  loadgamepage.cpp  loadgamepage.h  main.cpp  menupage.cpp  menupage.h  modepage.cpp  modepage.h  newgamepage.cpp  newgamepage.h  outstandingcardstack.cpp  outstandingcardstack.h  page.h  recordpage.cpp  recordpage.h  regularcardstack.cpp  regularcardstack.h
